# logs-docker-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/includes/: mod.rs
