[package]
name = "logs-docker-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
bollard = "0.21.0"
futures = "0.3.32"
dotenv = "0.15.0"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
